# ai-dev-tools-zoomcamp

./: .gitignore  README.md  e error near line 4: no such column: table aster WHERE (type="table" OR type="view") error here ---^OBOAOAOBOBOBOBOBOBOBOB  package-lock.json  render.yaml
.github/workflows/: 02-end-to-end-ci-cd.yml
01-overview/Final Project/: .gitignore  QUICKSTART.md  README.md  requirements.txt
01-overview/snake-game-claude/: README.md
01-overview/snake-game-githubcopilot/: README.md  index.html  package-lock.json  package.json
01-overview/snake-game-lovable/: README.md  tailwind.config.ts
02-end-to-end/: CI-CD.md  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  start.sh  stop.sh  tailwind.config.ts
02-end-to-end/backend/: Dockerfile  README.md  pyproject.toml
02-end-to-end/backend/app/: main.py
02-end-to-end/backend/app/routers/: auth.py  leaderboard.py  sessions.py
02-end-to-end/backend/src/: db.py  main.py  models.py
02-end-to-end/backend/src/routers/: sessions.py
02-end-to-end/backend/tests/: conftest.py  test_api.py
02-end-to-end/backend/tests_integration/: test_leaderboard.py  test_root.py
02-end-to-end/frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  (+1 more)
02-end-to-end/src/: App.tsx  (+1 more)
snake-game-claude/: index.html  package-lock.json  package.json
snake-game-githubcopilot/: index.html  package.json
snake-game-perro/: .env.example  .gitignore  PRODUCTION.md  README.md  RENDER.md  health-check.sh  nginx.conf  openapi.yaml  render.yaml
(+69 files in other folders)
