[project]
name = "backend"
version = "0.1.0"
description = "Snake Arena Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.4",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[dev-dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "tests_integration"]